--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^3.0.2"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
